--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -31,8 +31,8 @@ a{
   text-decoration: none;
 }
 
-a:active{
-  color: white;
+a{
+  color: darkcyan;
 }
 
 a:visited{
@@ -61,6 +61,7 @@ body{
 .col{
   background-color: lightgray;
   padding: 2rem;
+  border-radius: 20px;
 }
 
 .cols{
@@ -68,6 +69,8 @@ body{
   display: grid;
   grid-gap: 2rem;
 }
+
+/* Media Queries */
 
 @media (min-width: 380px){
   .cols {
@@ -92,8 +95,7 @@ body{
   margin-bottom: 5%;
 }
 
-
- /* Footer */
+/* Form */
 
 label{
   color: white; 
@@ -110,7 +112,6 @@ textarea{
   background: lightgray; 
   border: solid black;
   border-radius:10px;
-  width: 30%;
 }
 
 .btn{
@@ -118,6 +119,9 @@ textarea{
   color: white;
   border: solid black;
 }
+
+
+ /* Footer */
 
  footer {
   text-align: center;
