--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -32,11 +32,11 @@ a{
 }
 
 a{
-  color: darkcyan;
+  color: darkgray;
 }
 
 a:visited{
-color: rgb(165, 116, 42);
+color: rgb(42, 44, 165);
 }
 
 a:hover{
@@ -48,7 +48,8 @@ a:hover{
 body{
   font-family: sans-serif;
   font-size: 110%;
-  background-image: url(/Images/dreamyWorld.jpg);
+  background: rgb(2,0,36);
+background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
   background-repeat: no-repeat;
   background-size: cover;
   padding: 1rem;
@@ -110,6 +111,8 @@ body{
   margin-bottom: 2%;
 }
 
+
+
 /* Form */
 
 label{
@@ -129,12 +132,27 @@ textarea{
   border-radius:10px;
 }
 
-.btn{
-  background: darkgray; 
-  color: white;
-  border: solid black;
+.btn {
+  background-image: linear-gradient(to right, #314755 0%, #26a0da  51%, #314755  100%);
 }
 
+.btn{
+   margin: 10px;
+   padding: 15px 45px;
+   text-align: center;
+   text-transform: uppercase;
+   transition: 0.5s;
+   background-size: 200% auto;
+   color: white;            
+   box-shadow: 0 0 20px #eee;
+   border-radius: 10px;
+ }
+
+ .btn:hover {
+   background-position: right center; /* change the direction of the change here */
+   color: #fff;
+   text-decoration: none;
+ }
 
  /* Footer */
 
@@ -152,6 +170,7 @@ textarea{
   margin-top: 2rem;
   margin-left: 1rem;
   filter: contrast(150%);
+  box-shadow: 0 0 20px #eee;
 }
 
 .icons:hover{
