--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -3,6 +3,7 @@
 /* Header */
 
 #header{
+  text-align: center;
   color: white;
   font-weight: bolder;
   background-image: url(/Images/dreamyWorld.jpg);
