--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -6,7 +6,7 @@
   text-align: center;
   color: white;
   font-weight: bolder;
-  background-image: url(/Images/dreamyWorld.jpg);
+  background-image: url(/images/dreamyWorld.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   padding-bottom: 2%; 
